--- a/app/views/connections/index.html.erb
+++ b/app/views/connections/index.html.erb
@@ -1,14 +1,32 @@
 <% if user_signed_in? %>
-  <h2>Connections: </h2>
-  <% @connections.each do |connection| %>
-  <strong><%= connection["first_name"] + ' ' + connection["last_name"] %></strong><br>
-  <%= connection["headline"] %><br>
-  <% end %>
-  <% else %>
-  <p>Not signed in</p>
+  <table class="table">
+    <tr>
+    <th colspan = '5'><br><h3>Contact Queue</h3></th>
+    </tr>
+    <tr>
+      <th>Name</th>
+      <th>Headline</th>
+      <th>Note</th>
+      <th>Date to Contact</th>
+      <th></th>
+    </tr>
+    <tr>
+    <% @connections.each do |connection| %>
+    <td><%= connection["first_name"] + ' ' + connection["last_name"] %></td>
+    <td><%= connection["headline"] %></td>
+    <td><%= connection["note"] %></td>
+    <td><%= connection["date"] %></td>
+    <td><button><%= link_to "Update", edit_connection_path(connection.id) %></button></td>
+    </tr>
+    <% end %>
+  </table>
+<% else %>
 <% end %>
 
-<h2>Have you talked to
+
+<h3>Have you talked to
 <% random_connection = @connections.sample %>
 <%= random_connection["first_name"] + ' ' + random_connection["last_name"] + ' ' %>
 lately? </h2>
+
+<button><%= link_to "Add a Connection to the Contact Queue", new_connection_path %></button>
