--- a/app/views/connections/new.html.erb
+++ b/app/views/connections/new.html.erb
@@ -20,6 +20,35 @@
     <%= form.text_area :date %>
   </div>
   <%= form.submit "Add" %>
-</form>
+</form><br>
 <% end %>
+
+<h3>Have you talked to
+<% random_connection = @linkedin_connections.sample %>
+<%= random_connection["first_name"] + ' ' + random_connection["last_name"] + ' ' %>
+lately? </h2>
+
+<% if user_signed_in? %>
+  <table class="table">
+    <tr>
+    <th colspan = '2'><br><h3>LinkedIn Contacts</h3></th>
+    </tr>
+    <tr>
+      <th>Name</th>
+      <th>Headline</th>
+    </tr>
+    <tr>
+    <% if @linkedin_connections.nil? == false %>
+      <% @linkedin_connections.each do |connection| %>
+      <td><%= connection["first_name"] + ' ' + connection["last_name"] %></td>
+      <td><%= connection["headline"] %></td>
+      </tr>
+      <% end %>
+  </table>
+  <% else %>
+  <% end %>
+<% else %>
+<% end %>
+
+
 
