--- a/app/views/connections/show.html.erb
+++ b/app/views/connections/show.html.erb
@@ -3,5 +3,5 @@
 
 
 <%= link_to 'Edit Connection', edit_connection_path(@connection.id) %> ||
-<%= link_to 'Add a Connection to the Contact Queue', new_connection_path %>
+<%= link_to 'Add a Connection to the Contact Queue', new_connection_path %> ||
 <%= link_to 'View all Connections in the Contact Queue', connections_path %>
