--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @note do |form| %>
+<%= form_for [@connection, @note] do |form| %>
   <div>
     <%= form.label :body %>
     <%= form.text_area :body %>
