--- a/app/views/connections/new.html.erb
+++ b/app/views/connections/new.html.erb
@@ -1,21 +1,5 @@
 <%= form_for @connection do |form| %>
-  <div>
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
-  </div>
-  <div>
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
-  </div>
-  <div>
-    <%= form.label :headline %>
-    <%= form.text_field :headline %>
-  </div>
-  <div>
-    <%= form.label 'Date to contact next' %>
-    <%= form.text_area :date %>
-  </div>
-  <%= form.submit "Add" %>
+  <%= form.submit "Import LinkedIn Connections" %>
 </form><br>
 <% end %>
 
@@ -27,7 +11,7 @@ lately? </h2>
 <% if user_signed_in? %>
   <table class="table">
     <tr>
-    <th colspan = '3'><br><h3>LinkedIn Contacts</h3></th>
+    <th colspan='4'><br><h3>LinkedIn Contacts</h3></th>
     </tr>
     <tr>
       <th>Name</th>
@@ -40,6 +24,7 @@ lately? </h2>
       <td><img src="<%= connection["picture_url"] %>" alt="Profile Picture"></td>
       <td><%= connection["first_name"] + ' ' + connection["last_name"] %></td>
       <td><%= connection["headline"] %></td>
+      <% @user.connections << Connection.create(first_name: connection["first_name"], last_name: connection["last_name"], headline: connection["headline"]) %>
       </tr>
       <% else %>
       <% end %>
