enabled user to delete a connection after importing from linkedin

--- a/app/views/connections/edit.html.erb
+++ b/app/views/connections/edit.html.erb
@@ -17,3 +17,5 @@
   </div>
   <%= form.submit "Update" %>
 <% end %>
+
+<button><%= link_to "Add a Note", new_connection_note_path(@connection.id) %></button>
