--- a/app/views/connections/index.html.erb
+++ b/app/views/connections/index.html.erb
@@ -5,7 +5,7 @@
 <% if user_signed_in? %>
   <table class="table">
     <tr>
-    <th colspan = '4'><br><h3>Contact Queue</h3></th>
+    <th colspan = '5'><br><h3>Contact Queue</h3></th>
     </tr>
     <tr>
       <th>Name</th>
@@ -16,10 +16,11 @@
     <tr>
     <% if @connections.nil? == false %>
       <% @connections.each do |connection| %>
-      <td><%= connection["first_name"] + ' ' + connection["last_name"] %></td>
-      <td><%= connection["headline"] %></td>
-      <td><%= connection["date"] %></td>
+      <td><%= connection.first_name + ' ' + connection.last_name %></td>
+      <td><%= connection.headline %></td>
+      <td><%= connection.date %></td>
       <td><button><%= link_to "Update", edit_connection_path(connection.id) %></button></td>
+      <td><button><%= link_to "Delete", connection_path(connection.id), method: :delete %></button></td>
       </tr>
       <% end %>
   </table>
