--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,3 +1,5 @@
+<h3>Add a note on an interaction with <%= @connection.first_name + ' ' + @connection.last_name %></h3>
+
 <%= form_for [@connection, @note] do |form| %>
   <div>
     <%= form.label :body %>
