edited application.css.scss file

--- a/app/views/connections/index.html.erb
+++ b/app/views/connections/index.html.erb
@@ -3,7 +3,7 @@
 <%= @linkedin_profile["headline"] %>
 
 <%= form_for @connection do |form| %>
-  <%= form.submit "Import LinkedIn Connections" %>
+  <%= form.submit "Import or Refresh LinkedIn Connections" %>
 </form><br>
 <% end %>
 
