added navbar to connections index page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,16 @@
  */
 
 @import 'bootstrap';
+
+.btn.btn-default {
+  margin-left: auto;
+  margin-right: auto;
+  width: 19%;
+}
+
+a.hover {
+  text-decoration: none;
+}
+
+
+
