--- a/app/views/connections/edit.html.erb
+++ b/app/views/connections/edit.html.erb
@@ -1,3 +1,29 @@
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"><em>Rapport</em></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><%= link_to 'Contact Queue', connections_path %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li>Logged in as <strong><%= current_user.email %></strong></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
 <%= form_for @connection do |form| %>
   <div>
     <%= form.label :first_name %>
@@ -13,7 +39,7 @@
   </div>
   <div>
     <%= form.label 'Date to contact next' %>
-    <%= form.text_area :date %>
+    <%= form.text_field :date %>
   </div>
   <%= form.submit "Update" %>
 <% end %>
