updated layout of connections edit and index pages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,5 +24,14 @@ a.hover {
   text-decoration: none;
 }
 
+.import-button {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.panel-heading {
+  font-size: 30px;
+}
+
 
 
