--- a/app/views/connections/edit.html.erb
+++ b/app/views/connections/edit.html.erb
@@ -18,7 +18,7 @@
         <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li>Logged in as <strong><%= current_user.email %></strong></li>
+        <li><p class="navbar-text">Logged in as <strong><%= current_user.email %></strong></p></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
