added links to connection names to display all notes

--- a/app/views/connections/edit.html.erb
+++ b/app/views/connections/edit.html.erb
@@ -11,7 +11,6 @@
       <a class="navbar-brand" href="#"><em>Rapport</em></a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to 'Contact Queue', connections_path %></li>
@@ -20,8 +19,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><p class="navbar-text">Logged in as <strong><%= current_user.email %></strong></p></li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
 
 <%= form_for @connection do |form| %>
