--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,7 +1,31 @@
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"><em>Rapport</em></a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><%= link_to 'Contact Queue', connections_path %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><p class="navbar-text">Logged in as <strong><%= current_user.email %></strong></p></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <% if user_signed_in? %>
-<h3>Connection</h3>
-<%= @connection.first_name + ' ' + @connection.last_name %>
-<button><%= link_to "View Connection", connection_path(@connection.id) %></button>
+<h2><%= @connection.first_name + ' ' + @connection.last_name %></h2>
+<h3><%= @connection.headline %></h3>
   <table class="table">
     <tr>
     <th colspan ='3'><br><h3>Notes</h3></th>
@@ -16,7 +40,7 @@
       <% @notes.each do |note| %>
       <td><%= note.body %></td>
       <td><%= note.date_of_interaction %></td>
-      <td><button><%= link_to "Update", edit_connection_note_path(note.connection_id, note.id) %></button></td>
+      <td><button type="button"><span class="glyphicon glyphicon-pencil"></span><%= link_to " Edit", edit_connection_note_path(note.connection_id, note.id) %></button></td>
       </tr>
       <% end %>
   </table>
