edited css further, incorporated google fonts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,3 +33,12 @@ a.hover {
   font-size: 30px;
 }
 
+.navbar-text.brand {
+  font-family: 'Lemon', cursive;
+}
+
+.brand {
+  font-family: 'Lemon', cursive;
+}
+
+
