--- a/app/views/connections/index.html.erb
+++ b/app/views/connections/index.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><em>Rapport</em></a>
+      <p class="navbar-text brand"><em>Rapport</em></p>
     </div>
 
     <div class="collapse navbar-collapse">
@@ -39,7 +39,7 @@
     <tr>
       <th>Name</th>
       <th>Headline</th>
-      <th><span class="glyphicon glyphicon-calendar"></span>Date to Contact</th>
+      <th><span class="glyphicon glyphicon-calendar"></span>Date to Contact Next</th>
       <th></th>
       <th></th>
     </tr>
