--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><em>Rapport</em></a>
+      <p class="navbar-text brand"><em>Rapport</em></p>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
