--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><em>Rapport</em></a>
+      <p class="navbar-text brand"><em>Rapport</em></p>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -26,12 +26,12 @@
 <% if user_signed_in? %>
 <h2><%= @connection.first_name + ' ' + @connection.last_name %></h2>
 <h3><%= @connection.headline %></h3>
-  <table class="table">
+  <table class="table table-hover">
     <tr>
-    <th colspan ='3'><br><h3>Notes</h3></th>
+    <th colspan ='3'><br><h3>Notes</h3><button type="button"><%= link_to "Add New Note", new_connection_note_path(@connection.id) %></button></th>
     </tr>
     <tr>
-      <th>Note Body</th>
+      <th>Note</th>
       <th>Date of Interaction</th>
       <th></th>
     </tr>
