--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,4 +41,13 @@ a.hover {
   font-family: 'Lemon', cursive;
 }
 
+.form-label {
+  font-size: 20px;
+}
+
+.form-input {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
 
