--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body class="container">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-
-<%= yield %>
-
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+        <%= yield %>
+    </div>
+  </div>
 </body>
 </html>
