--- a/app/views/connections/index.html.erb
+++ b/app/views/connections/index.html.erb
@@ -33,12 +33,12 @@
 <% end %>
 
 <% if user_signed_in? %>
-<div class="panel panel-default">
+<div class="panel panel-success">
   <div class="panel-heading">Contact Queue</div>
   <table class="table table-hover">
     <tr>
       <th>Name</th>
-      <th>Headline</th>
+      <th>Current Position</th>
       <th><span class="glyphicon glyphicon-calendar"></span>Date to Contact Next</th>
       <th></th>
       <th></th>
