--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -26,10 +26,9 @@
 <% if user_signed_in? %>
 <h2><%= @connection.first_name + ' ' + @connection.last_name %></h2>
 <h3><%= @connection.headline %></h3>
+<div class="panel panel-success">
+  <div class="panel-heading">Notes<button class="new-button btn-sm" type="button"><%= link_to "Add New Note", new_connection_note_path(@connection.id) %></button></div>
   <table class="table table-hover">
-    <tr>
-    <th colspan ='3'><br><h3>Notes</h3><button type="button"><%= link_to "Add New Note", new_connection_note_path(@connection.id) %></button></th>
-    </tr>
     <tr>
       <th>Note</th>
       <th>Date of Interaction</th>
