--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -28,7 +28,7 @@
 
 <%= form_for [@connection, @note] do |form| %>
   <div class="form-label"><%= form.label "Note" %></div>
-  <div class="form-label"><%= form.text_area :body %></div>
+  <div class="form-input"><%= form.text_area :body %></div>
 
   <div class="form-label"><%= form.label :date_of_interaction %></div>
   <div class="form-input"><%= form.text_field :date_of_interaction %></div>
