--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,10 @@ a.hover {
   background-color: white;
 }
 
+.panel {
+  background-color: rgba(255, 255, 255, 0.9);
+  }
+
 .navbar-text.brand {
   font-family: 'Lemon', cursive;
 }
@@ -56,14 +60,19 @@ a.hover {
   background-color: white;
 }
 
-.landing-page {
-  background-image: url(http://www.inc.com/uploaded_files/image/970x450/happy-hour_pan_24534.jpg);
-  background-position: 50% 50% 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 .add-a-note {
   margin-top: 15px;
 }
 
+.panel.panel-success {
+  background: transparent;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  &:hover {
+    color: white;
+    text-decoration: none;
+  }
+}
