--- a/app/views/connections/index.html.erb
+++ b/app/views/connections/index.html.erb
@@ -52,7 +52,7 @@
       <td><%= link_to full_name, connection_notes_path(connection.id) %></td>
       <td><%= connection.headline %></td>
       <td><%= connection.date %></td>
-      <td><button type="button"><span class="glyphicon glyphicon-pencil"></span><%= link_to "Edit", edit_connection_path(connection.id) %></button></td>
+      <td><button type="button"><span class="glyphicon glyphicon-pencil"></span><%= link_to " Edit Date", edit_connection_path(connection.id) %></button></td>
       <td><button type="button"><span class="glyphicon glyphicon-trash"></span><%= link_to "Delete", connection_path(connection.id), method: :delete %></button></td>
       </tr>
       <% end %>
