--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -70,9 +70,11 @@ a.hover {
 
 a {
   text-decoration: none;
-  color: white;
   &:hover {
-    color: white;
     text-decoration: none;
   }
+}
+
+.jumbotron {
+  background-color: #90EE90;
 }
