--- a/app/views/connections/edit.html.erb
+++ b/app/views/connections/edit.html.erb
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
@@ -17,7 +16,7 @@
         <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><p class="navbar-text">Logged in as <strong><%= current_user.email %></strong></p></li>
+        <li><p class="navbar-text">Logged in</p></li>
       </ul>
     </div>
   </div>
