--- a/app/views/notes/edit.html.haml
+++ b/app/views/notes/edit.html.haml
@@ -1,14 +1,12 @@
-%nav class="navbar navbar-default navbar-fixed-top" role="navigation"
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+%nav.navbar.navbar-default.navbar-fixed-top{ :role => 'navigation' }
+  .container-fluid
+    .navbar-header
+      %button.navbar-toggle{ :type => "button", :data => {:toggle => "collapse", :target => "#bs-example-navbar-collapse-1"}}
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </button>
       <p class="navbar-text brand"><em>Rapport</em></p>
-    </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
@@ -20,8 +18,6 @@
         <li><p class="navbar-text">Logged in</p></li>
       </ul>
     </div>
-  </div>
-</nav>
 
 <%= form_for [@connection, @note] do |form| %>
   <div class="form-label"><%= form.label 'Note' %></div>
