--- a/app/views/notes/edit.html.haml
+++ b/app/views/notes/edit.html.haml
@@ -2,29 +2,29 @@
   .container-fluid
     .navbar-header
       %button.navbar-toggle{ :type => "button", :data => {:toggle => "collapse", :target => "#bs-example-navbar-collapse-1"}}
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      <p class="navbar-text brand"><em>Rapport</em></p>
+        %span.sr-only Toggle navigation
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
+      %p.navbar-text.brand <em>Rapport</em>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><%= link_to 'Contact Queue', connections_path %></li>
-        <li><%= link_to 'All Contact Notes', connection_notes_path(@connection.id) %></li>
-        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><p class="navbar-text">Logged in</p></li>
-      </ul>
-    </div>
+    .collapse.navbar-collapse#bs-example-navbar-collapse-1
+      %ul.nav.navbar-nav
+        %li= link_to 'Contact Queue', connections_path
+        %li= link_to 'All Contact Notes', connection_notes_path(@connection.id)
+        %li= link_to "Logout", destroy_user_session_path, method: :delete
 
-<%= form_for [@connection, @note] do |form| %>
-  <div class="form-label"><%= form.label 'Note' %></div>
-  <div class="form-input"><%= form.text_area :body %></div>
+      %ul.nav.navbar-nav.navbar-right
+        %li
+          %p.navbar-text Logged in
 
-  <div class="form-label"><%= form.label :date_of_interaction %></div>
-  <div class="form-input"><%= form.text_field :date_of_interaction %></div>
-
-  <%= form.submit "Update Note" %>
-<% end %>
+= form_for [@connection, @note] do |form|
+  .form-label
+    = form.label 'Note'
+  .form-input
+    = form.text_area :body
+  .form-label
+    = form.label :date_of_interaction
+  .form-input
+    = form.text_field :date_of_interaction
+  = form.submit "Update Note"
