fixed syntax error with header on new note view

--- a/app/views/notes/new.html.haml
+++ b/app/views/notes/new.html.haml
@@ -18,8 +18,8 @@
         %li
           %p.navbar-text Logged in
 
-%h3 Add a note on an interaction with
-  = @connection.first_name + ' ' + @connection.last_name
+%h3
+  = "Add a note on an interaction with " + @connection.first_name + ' ' + @connection.last_name
 
 = form_for [@connection, @note] do |form|
   .form-label
