fixed mistake in button text on new note view

--- a/app/views/notes/new.html.haml
+++ b/app/views/notes/new.html.haml
@@ -30,4 +30,4 @@
     = form.label :date_of_interaction
   .form-input
     = form.text_field :date_of_interaction
-  = form.submit "Update Note"
+  = form.submit "Add Note"
